# stm32-uart-prog

./: .gitignore  README.md  pyproject.toml
src/stm32_uart_prog/: arg_parser.py  bootloader.py  colors.py  context.py  loggers.py  main.py  serial_port.py
