[project]
name = "stm32-uart-prog"
version = "0.1.1"
description = "A tool to perform mass programming of STM32 microcontrollers via UART and RS485 interfaces using the factory bootloader protocol"
authors = [
    {name = "FT9R",email = "ft9r@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "intelhex (>=2.3.0,<3.0.0)",
    "pyserial (>=3.5,<4.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "stm32_uart_prog", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
stm32-uart-prog = "stm32_uart_prog.main:main"